--- a/frontend/translations/es.po
+++ b/frontend/translations/es.po
@@ -1833,18 +1833,18 @@ msgstr[0] ""
 "Si lo borras, esos elementos pasarán a formar parte de la biblioteca local "
 "de este archivo. Cualquier elemento en desuso se perderá."
 msgstr[1] ""
-"Si lo borras, esos elementos pasarán a formar parte de las bibliotecas locales de "
-"estos archivos. Cualquier elemento en desuso se perderá."
+"Si los borras, esos elementos pasarán a formar parte de la biblioteca local "
+"de este archivo. Cualquier elemento en desuso se perderá."
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
 msgid "modals.delete-shared-confirm.hint-many"
 msgid_plural "modals.delete-shared-confirm.hint-many"
 msgstr[0] ""
-"Si los borras, esos elementos pasarán a formar parte de la biblioteca local "
-"de este archivo. Cualquier elemento en desuso se perderá."
+"Si lo borras, esos elementos pasarán a formar parte de las bibliotecas locales "
+"de estos archivos. Cualquier elemento en desuso se perderá."
 msgstr[1] ""
-"Si los borras, esos elementos pasarán a formar parte de las bibliotecas locales de "
-"estos archivos. Cualquier elemento en desuso se perderá."
+"Si los borras, esos elementos pasarán a formar parte de las bibliotecas locales "
+"de estos archivos. Cualquier elemento en desuso se perderá."
 
 #: src/app/main/ui/delete_shared.cljs
 msgid "modals.delete-shared.title"
