:sparkles: Add `add flex layout` option in context menu

--- a/frontend/translations/en.po
+++ b/frontend/translations/en.po
@@ -4066,6 +4066,14 @@ msgstr "Update main components"
 msgid "workspace.shape.menu.update-main"
 msgstr "Update main component"
 
+#: src/app/main/ui/workspace/context_menu.cljs
+msgid "workspace.shape.menu.add-flex"
+msgstr "Add layout flex"
+
+#: src/app/main/ui/workspace/context_menu.cljs
+msgid "workspace.shape.menu.remove-flex"
+msgstr "Remove layout flex"
+
 msgid "workspace.sidebar.collapse"
 msgstr "Collapse sidebar"
 
