--- a/frontend/translations/es.po
+++ b/frontend/translations/es.po
@@ -3061,6 +3061,9 @@ msgstr "Interlineado"
 msgid "workspace.assets.typography.sample"
 msgstr "Ag"
 
+msgid "workspace.assets.typography.text-styles"
+msgstr "Estilos de texto"
+
 #: src/app/main/ui/workspace/sidebar/options/menus/typography.cljs
 msgid "workspace.assets.typography.text-transform"
 msgstr "Transformar texto"
