:tada: Add inspect tab to workspace

--- a/frontend/translations/en.po
+++ b/frontend/translations/en.po
@@ -3615,6 +3615,9 @@ msgstr "Position"
 msgid "workspace.options.prototype"
 msgstr "Prototype"
 
+msgid "workspace.options.inspect"
+msgstr "Inspect"
+
 msgid "workspace.options.radius"
 msgstr "Radius"
 
