--- a/frontend/translations/es.po
+++ b/frontend/translations/es.po
@@ -762,7 +762,7 @@ msgid "errors.webhooks.unexpected-status"
 msgstr "Estado inesperado %s"
 
 msgid "errors.webhooks.invalid-uri"
-msgstr "La URL no pasa la validacion."
+msgstr "La URL no pasa la validación."
 
 #: src/app/main/ui/alert.cljs
 msgid "ds.alert-ok"
